--- a/GOALS/UpdatedTables.ipynb
+++ b/GOALS/UpdatedTables.ipynb
@@ -511,8 +511,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "ec9d2442",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['name', 'Dlum[Mpc]', 'log(Lir)', 'obsFName', 'fit', 'OptVel[km/s]',\n",
+       "       'int_time', 'line[Jykm/s]', 'peak', 'ch1', 'ch2', 'continuumLevel',\n",
+       "       'RMS[mJy]', '50L', '50Lerr', 'w50', 'w50err', '50centerVel',\n",
+       "       '50centVelErr', '20L', '20Lerr', 'w20', 'w20err', '20centerVel',\n",
+       "       '20centVelErr'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v5df = pd.read_csv(folder_path + 'goals_v5.csv', skiprows=None)\n",
+    "v5df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3e9d8f49",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['name', 'int_time', 'S_HISign', 'S_HI', 'S_HIErr', 'HI_Vel',\n",
+       "       'HI_VelErr', 'W50', 'W50Err', 'W20', 'W20Err', 'CFDSign', 'CFD',\n",
+       "       'CFDErr', 'CPSSign', 'CPS', 'CRMS', 'MassSign', 'Log(M_HI)',\n",
+       "       'LogM_HIErr', 'ProfileCode'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "meas_v1df = pd.read_csv(folder_path + 'TABmeas_v1.csv', skiprows=None)\n",
+    "meas_v1df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "73805b94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33\n",
+      "10.041132697827827\n",
+      "9.17\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/scratch/gbosdd/conda/envs/student-rhel8/lib/python3.11/site-packages/pandas/core/arraylike.py:399: RuntimeWarning: invalid value encountered in log10\n",
+      "  result = getattr(ufunc, method)(*inputs, **kwargs)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#print(meas_v1df['Log(M_HI)'])\n",
+    "\n",
+    "logLir = df1['LOG(Lir)']\n",
+    "Lir = np.power(10, logLir) # Convert log Lir to Lir\n",
+    "dist = df1.Dl\n",
+    "SHI = df1['S(HI)']\n",
+    "SHIErr = df1.Err\n",
+    "velocity = df1.Vel\n",
+    "\n",
+    "c = 299792.458 #km/s\n",
+    "\n",
+    "z = velocity / c  # Convert velocity to redshift\n",
+    "\n",
+    "percent_error = 0.1\n",
+    "\n",
+    "M_h1 = (2.36e5/(1+z)**2) * SHI * dist**2\n",
+    "\n",
+    "logM = np.log10(M_h1)  # Convert M_h1 to log scale\n",
+    "\n",
+    "\n",
+    "\n",
+    "diff = logM - meas_v1df['Log(M_HI)']\n",
+    "\n",
+    "print(np.argmax(diff))\n",
+    "\n",
+    "print(logM[33])\n",
+    "\n",
+    "print(meas_v1df['Log(M_HI)'][33])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bd4a948",
    "metadata": {},
    "outputs": [],
    "source": []
