--- a/GOALS/UpdatedTables.ipynb
+++ b/GOALS/UpdatedTables.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "703022d2",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
        "[161 rows x 11 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "bbfc0f3c",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "ec9d2442",
    "metadata": {},
    "outputs": [
@@ -526,7 +526,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "3e9d8f49",
    "metadata": {},
    "outputs": [
@@ -552,7 +552,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
+   "id": "d9446c7a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "73805b94",
    "metadata": {},
    "outputs": [
@@ -572,17 +580,167 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "33\n",
-      "10.041132697827827\n",
-      "9.17\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/scratch/gbosdd/conda/envs/student-rhel8/lib/python3.11/site-packages/pandas/core/arraylike.py:399: RuntimeWarning: invalid value encountered in log10\n",
-      "  result = getattr(ufunc, method)(*inputs, **kwargs)\n"
+      "F04097+0525: -0.480040\n",
+      "F03514+1546: -0.415096\n",
+      "F04118-3207: -0.329525\n",
+      "F01364-1042: -0.022649\n",
+      "F05054+1718: -0.012983\n",
+      "F01076-1707: -0.006243\n",
+      "F02071-1023: -0.004256\n",
+      "F21453-3511: -0.004150\n",
+      "F08424-3130: -0.004097\n",
+      "F16443-2915: -0.003981\n",
+      "F23488+2018: -0.003951\n",
+      "F05083+2441: -0.003930\n",
+      "F06538+4628: -0.003923\n",
+      "F02401-0013: -0.003840\n",
+      "F02114+0456: -0.003747\n",
+      "F12243-0036: -0.003683\n",
+      "F16104+5235: -0.003645\n",
+      "F23262+0314: -0.003644\n",
+      "F20221-2458: -0.003583\n",
+      "F12592+0436: -0.003544\n",
+      "F02281-0309: -0.003347\n",
+      "F18425+6036: -0.003185\n",
+      "F00085-1223: -0.003092\n",
+      "F14280+3126: -0.003050\n",
+      "F23254+0830: -0.002881\n",
+      "F13097-1531: -0.002780\n",
+      "F17138-1017: -0.002712\n",
+      "F11011+4107: -0.002641\n",
+      "F13229-2934: -0.002589\n",
+      "F20304-0211: -0.002503\n",
+      "F06107+7822: -0.002431\n",
+      "F16030+2040: -0.002427\n",
+      "F16399-0937: -0.002354\n",
+      "F00344-3349: -0.002253\n",
+      "F19115-2124: -0.002169\n",
+      "F11186-0242: -0.002057\n",
+      "F21101+5810: -0.002046\n",
+      "F07256+3355: -0.002011\n",
+      "F16516-0948: -0.002000\n",
+      "F13136+6223: -0.001868\n",
+      "F23007+0836: -0.001823\n",
+      "F13362+4831: -0.001789\n",
+      "F18329+5950: -0.001706\n",
+      "F05442+1732: -0.001491\n",
+      "F23488+1949: -0.001333\n",
+      "F05365+6921: -0.001279\n",
+      "F05414+5840: -0.001255\n",
+      "F04271+3849: -0.001235\n",
+      "F02435+1253: -0.001175\n",
+      "F14423-2039: -0.001121\n",
+      "F05129+5128: -0.001060\n",
+      "F03117+4151: -0.000616\n",
+      "F12043-3140: -0.000450\n",
+      "F05187-1017: -0.000445\n",
+      "F12590+2934: -0.000314\n",
+      "F20550+1655: -0.000207\n",
+      "F20351+2521: -0.000060\n",
+      "F07063+2043: -0.000021\n",
+      "F18090+0130: 0.000242\n",
+      "F04502-3304: 0.000251\n",
+      "F17530+3447: 0.000282\n",
+      "F02512+1446: 0.000637\n",
+      "F17578-0400: 0.000657\n",
+      "F01417+1651: 0.000660\n",
+      "F23436+5257: 0.000787\n",
+      "F15276+1309: 0.000814\n",
+      "F09126+4432: 0.000824\n",
+      "F16284+0411: 0.000845\n",
+      "F13470+3530: 0.000979\n",
+      "F11231+1456: 0.001038\n",
+      "F19120+7320: 0.001167\n",
+      "F10196+2149: 0.001200\n",
+      "F13373+0105: 0.001206\n",
+      "F13564+3741: 0.001333\n",
+      "F13197-1627: 0.001350\n",
+      "F19297-0406: 0.001379\n",
+      "F12116+5448: 0.001527\n",
+      "F05223+1908: 0.001559\n",
+      "F23024+1916: 0.001637\n",
+      "F23444+2911: 0.001643\n",
+      "F22118-2742: 0.001673\n",
+      "F17548+2401: 0.001702\n",
+      "F05368+4940: 0.001777\n",
+      "F17132+5313: 0.001787\n",
+      "F01484+2220: 0.001789\n",
+      "F05081+7936: 0.001855\n",
+      "F08354+2555: 0.001911\n",
+      "F16577+5900: 0.002249\n",
+      "F18293-3413: 0.002318\n",
+      "F09437+0317: 0.002338\n",
+      "F14547+2449: 0.002409\n",
+      "F00548+4331: 0.002434\n",
+      "F23394-0353: 0.002471\n",
+      "F16164-0746: 0.002604\n",
+      "F22287-1917: 0.002672\n",
+      "F11257+5850: 0.002686\n",
+      "F02152+1418: 0.002720\n",
+      "F05189-2524: 0.002723\n",
+      "F15163+4255: 0.002845\n",
+      "F13497+0220: 0.002876\n",
+      "F02208+4744: 0.002920\n",
+      "F20264+2533: 0.003069\n",
+      "F06295-1735: 0.003120\n",
+      "F02070+3857: 0.003314\n",
+      "F23157-0441: 0.003364\n",
+      "F07329+1149: 0.003474\n",
+      "F02437+2122: 0.003713\n",
+      "F12596-1529: 0.003950\n",
+      "F01053-1746: 0.003990\n",
+      "F06076-2139: 0.004008\n",
+      "F00402-2349: 0.004008\n",
+      "F01173+1405: 0.004078\n",
+      "F09333+4841: 0.004100\n",
+      "F00163-1039: 0.004227\n",
+      "F13188+0036: 0.004268\n",
+      "F05053-0805: 0.004290\n",
+      "F00506+7248: 0.004341\n",
+      "F22389+3359: 0.004399\n",
+      "F18131+6820: 0.004412\n",
+      "F02203+3158: 0.004441\n",
+      "F00073+2538: 0.004443\n",
+      "F04315-0840: 0.004518\n",
+      "F23135+2517: 0.004615\n",
+      "F13301-2356: 0.004661\n",
+      "F04326+1904: 0.004708\n",
+      "F02345+2053: 0.004959\n",
+      "F01519+3640: 0.004972\n",
+      "F15437+0234: 0.004987\n",
+      "F09111-1007: 0.005019\n",
+      "F23157+0618: 0.005049\n",
+      "F18145+2205: 0.005122\n",
+      "F06052+8027: 0.005228\n",
+      "F10038-3338: 0.005237\n",
+      "F10015-0614: 0.005242\n",
+      "F08572+3915: 0.005301\n",
+      "F14179+4927: 0.005583\n",
+      "F08339+6517: 0.005719\n",
+      "F07251-0248: 0.008273\n",
+      "F10173+0828: 0.009536\n",
+      "F22491-1808: 0.009654\n",
+      "F12224-0624: 0.012860\n",
+      "F14348-1447: 0.014425\n",
+      "F19542+1110: 0.018684\n",
+      "F03217+4022: 0.252690\n",
+      "F03582+6012: 0.290277\n",
+      "F04191-1855: 0.871133\n",
+      "F09320+6134: nan\n",
+      "F15327+2340: nan\n",
+      "F17207-0014: nan\n",
+      "F23365+3604: nan\n",
+      "F03359+1523: nan\n",
+      "F15250+3608: nan\n",
+      "F15107+0724: nan\n",
+      "F12112+0305: nan\n",
+      "F13001-2339: nan\n",
+      "F13428+5608: nan\n",
+      "F10565+2448: nan\n",
+      "F13126+2453: nan\n",
+      "F13182+3424: nan\n",
+      "F16504+0228: nan\n",
+      "F12540+5708: nan\n"
      ]
     }
    ],
@@ -610,11 +768,14 @@
     "\n",
     "diff = logM - meas_v1df['Log(M_HI)']\n",
     "\n",
-    "print(np.argmax(diff))\n",
+    "# Sort by difference (ascending)\n",
+    "sorted_idx = np.argsort(diff.values)\n",
+    "sorted_name = df1['Name'].iloc[sorted_idx]\n",
+    "sorted_diff = diff.iloc[sorted_idx]\n",
+    "for name, d in zip(sorted_name, sorted_diff):\n",
+    "    print(f\"{name}: {d:.6f}\")\n",
     "\n",
-    "print(logM[33])\n",
     "\n",
-    "print(meas_v1df['Log(M_HI)'][33])\n",
     "\n"
    ]
   },
