--- a/GOALS/UpdatedTables.ipynb
+++ b/GOALS/UpdatedTables.ipynb
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "73805b94",
    "metadata": {},
    "outputs": [
@@ -741,6 +741,14 @@
       "F20550+1655: 0.000207\n",
       "F20351+2521: 0.000060\n",
       "F07063+2043: 0.000021\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/scratch/gbosdd/conda/envs/student-rhel8/lib/python3.11/site-packages/pandas/core/arraylike.py:399: RuntimeWarning: invalid value encountered in log10\n",
+      "  result = getattr(ufunc, method)(*inputs, **kwargs)\n"
      ]
     }
    ],
