--- a/GOALS/GOALSWork.ipynb
+++ b/GOALS/GOALSWork.ipynb
@@ -1141,17 +1141,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "227dde49",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Code '0': 20 matches\n",
+      "Lir for code '0': [4.46683592e+11 7.07945784e+11 1.17489755e+11 1.28824955e+11\n",
+      " 1.47910839e+11 1.65958691e+11 1.44543977e+12 4.46683592e+11\n",
+      " 2.45470892e+12 1.44543977e+12 7.24435960e+11 2.29086765e+11\n",
+      " 2.39883292e+11 3.63078055e+11 2.45470892e+12 4.16869383e+11\n",
+      " 2.81838293e+12 1.31825674e+12 6.45654229e+11 1.58489319e+12]\n",
+      "M_h1 for code '0': [7.82991360e+08 1.04076000e+09 1.35043920e+08 3.08151808e+08\n",
+      " 4.36768315e+08 2.86428952e+08 1.15537576e+09 8.99514000e+08\n",
+      " 1.81248000e+10 1.97379072e+09 1.65781504e+09 5.16250000e+08\n",
+      " 4.07085840e+08 6.28364160e+08 5.30182260e+09 6.95992320e+08\n",
+      " 6.62794200e+09 2.87530600e+09 9.28867680e+08 4.07056104e+09]\n",
+      "Code '5': 6 matches\n",
+      "Lir for code '5': [1.44543977e+11 3.98107171e+11 8.51138038e+11 2.34422882e+11\n",
+      " 2.63026799e+11 4.46683592e+11]\n",
+      "M_h1 for code '5': [3.49713808e+09 1.78612172e+09 1.12897881e+09 7.98452505e+09\n",
+      " 4.22522650e+08 2.80657489e+09]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "Text(0.5, 1.0, 'Entire Sample')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1173,7 +1195,11 @@
     "# Plot triangles for special codes\n",
     "for code_val, marker, color, label in [('0', 'v', 'C1', \"Upper Limit\"), ('5', '^', 'C2', \"Lower Limit\")]:\n",
     "    idx = df1.Code.str.contains(code_val)\n",
+    "    print(f\"Code '{code_val}': {idx.sum()} matches\")\n",
+    "\n",
     "    if idx.any():\n",
+    "        print(f\"Lir for code '{code_val}':\", Lir[idx].values)\n",
+    "        print(f\"M_h1 for code '{code_val}':\", M_h1[idx].values)\n",
     "        plt.loglog(Lir[idx], M_h1[idx], marker, markersize=8, color=color, alpha=0.8, label=label)\n",
     "\n",
     "# Plot circles for all other points\n",
