--- a/GOALS/GOALS_v3.ipynb
+++ b/GOALS/GOALS_v3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "id": "bbf72e0d",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "a849d734",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "id": "e9776adc",
    "metadata": {},
    "outputs": [
@@ -296,6 +296,7 @@
     "    # Layout adjustments\n",
     "    plt.tight_layout(rect=[0, 0.05, 1, 0.93])\n",
     "    fig.subplots_adjust(bottom=0.07)\n",
+    "    plt.savefig('spectra_batch_{}.png'.format(b + 1))\n",
     "    plt.show()\n",
     "    plt.close(fig)"
    ]
